Completed assignments TO DO 1-6

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 </app-product-list>
 
-<app-shopping-cart [products]="cartProductList">
+<app-shopping-cart (productRemoved)="removeProductFromCart($event)" [products]="cartProductList">
 
 </app-shopping-cart>
