--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-product-list (productAdded)="addProductToCart($event)" [products]="productList">
-
+<app-product-list
+  (productAdded)="addProductToCart($event)"
+  [products]="productList"
+>
 </app-product-list>
 
-<app-shopping-cart [products]="cartProductList">
 
-</app-shopping-cart>
+<app-shopping-cart (productRemove)="removeProductFromCart($event)" [products]="cartProductList"> </app-shopping-cart>
