--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,2 +1,3 @@
-<div>{{product.title}}</div><button (click)="addProductToCart(product)">+</button>
+<div>{{product.title}}</div>
+<button (click)="addProductToCart(product)">+</button>
 <div>{{product.price.toLocaleString('en-US', {style: 'currency', currency: 'USD'})}}</div>
