--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,10 @@
+<h1>Shopping Cart ({{ calcTotalItems() }})</h1>
 
-<h1>Shopping Cart ({{calcTotal()}})</h1>
-<app-cart-product *ngFor="let product of products" [product]="product"><app-cart-product>
+<app-cart-product
+  (productRemove)="productRemove.emit($event)"
+  *ngFor="let product of products"
+  [product]="product"
+  ><app-cart-product> </app-cart-product
+></app-cart-product>
+
+<h1>Total ({{ calcTotalPrice() }})</h1>
