--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,10 @@
+<div class="display-options">
+  <label>Sort:</label>
+  <button (click)="sortProductListByAbc.emit()">Alphabetically</button>
+  <label>Price:</label>
+  <button (click)="sortProductListByPrice.emit(false)">Lower first</button>
+  <button (click)="sortProductListByPrice.emit(true)">Higher first</button>
+</div>
 <h1>Products</h1>
 
 <app-product *ngFor="let product of products" [product]="product" (productAdded)="addProductToCart($event)"></app-product>
