--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,8 @@
 <h1>Products</h1>
+<button (click)="sortProductListByName.emit()">Sort by name</button>
 
-<app-product *ngFor="let product of products" [product]="product" (productAdded)="addProductToCart($event)"></app-product>
+<app-product
+  *ngFor="let product of products"
+  [product]="product"
+  (productAdded)="addProductToCart($event)"
+></app-product>
