--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,2 +1,11 @@
-<div>{{product.title}}</div><button (click)="addProductToCart(product)">+</button>
-<div>{{product.price.toLocaleString('en-US', {style: 'currency', currency: 'USD'})}}</div>
+<div class="product">
+  <div class="image-container">
+    <img class="product-image" src={{product.image}} alt={{product.title}}>
+  </div>
+  <div class="product-details">
+    <h2 class="product-title">{{product.title}}</h2>
+    <div class="product-description">{{product.description}}</div>
+  </div>
+  <div class="price">{{product.price.toLocaleString('en-US', {style: 'currency', currency: 'USD'})}}</div>
+  <button class="add-to-cart" (click)="addProductToCart(product)">+</button>
+</div>
