--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,18 @@
-<app-product-list (sortProductListByAbc)="sortAbc()" (sortProductListByPrice)="sortPrice($event)" (productAdded)="addProductToCart($event)" [products]="productList">
+<a href="/"><div class="top-logo">Your Logo</div></a>
+<app-product-list
+  (productsSortedAbc)="sortAbc($event)"
+  (productsSortedPrice)="sortPrice($event)"
+  (productAdded)="addProductToCart($event)"
+  (productsSearched)="searchProducts($event)"
+  [products]="productList"
+>
 
 </app-product-list>
 
-<app-shopping-cart (productRemoved)="removeProductFromCart($event)" [products]="cartProductList">
+
+<app-shopping-cart
+  (productRemoved)="removeProductFromCart($event)"
+  [products]="cartProductList"
+>
 
 </app-shopping-cart>
