--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -60,7 +60,7 @@
   }
   .add-to-cart {
     padding: 0.5em;
-    pointer: cursor;
+    cursor: pointer;
     font-weight: 900;
     font-size: 2rem;
     color: #F3A20BFF;
