--- a/src/app/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/components/shopping-cart/shopping-cart.component.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-around;
     input {
-      pointer: cursor;
+      cursor: pointer;
       width: 120px;
       height: 30px;
       padding: 1em;
