adding a sorting by name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-product-list
   (productAdded)="addProductToCart($event)"
-  (sortProductByName)="sortProductByName()"
+  (sortProductListByName)="sortProductByName()"
   [products]="productList"
 >
 </app-product-list>
