Finished search bar and filter by category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-product-list
   (productAdded)="addProductToCart($event)"
   (sortProductListByName)="sortProductByName()"
+  (sortProductListByPrice)="sortProductByPrice()"
+  (filterProductListByCategory)="filterByCategory($event)"
+  (searchByTitle)="searchByTitle($event)"
   [products]="productList"
 >
 </app-product-list>
@@ -10,3 +13,5 @@
   [products]="cartProductList"
 >
 </app-shopping-cart>
+
+<!-- https://zoom.us/j/96409472443?pwd=b2s2azRXeEdtcFh1d2ROS0xxTWoxUT09 -->
