--- a/src/app/components/cart-product/cart-product.component.html
+++ b/src/app/components/cart-product/cart-product.component.html
@@ -10,5 +10,8 @@
     />
     <button (click)="dec()" title="smaller">-</button>
     <button (click)="inc()" title="bigger">+</button>
+    <button (click)="updateQuantity(0)" title="smaller">
+      remove from cart
+    </button>
   </div>
 </div>
